--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       let currentUserAddressGlobal = ""
       let globalDebug = null
 
-      const contractAddressGlobal = process.env.CONTRACT_ADDRESS || ""
+      const contractAddressGlobal = "0x685Ef2AF2d5B763DDA502c0Fa256101938567754"
 
       const blockchainNetMeta = 'TODO: our workable url';
       const blockchainScanUrl = 'TODO: ';
